# solid-pact-python-rest

./: .gitignore  .npmrc  AGENTS.md  PLAN.md  README.md  REQUIREMENTS.md  VIBE.md  package.json  pnpm-lock.yaml  turbo.json
.cursor/rules/: const-arrow-functions.mdc  idiomatic-python.mdc  no-default-export-typescript.mdc  path-alias-typescript.mdc  post-merge-git.mdc
.github/workflows/: ci.yml  validate-openapi-python-codegen.yml  validate-openapi.yml
apps/api/: README.md  package.json  pyproject.toml  pyrightconfig.json
apps/api/app/: __init__.py  main.py  main_test.py  models.py
apps/api/app/openapi/: __init__.py  codegen.py  codegen_test.py  paths.py  paths_test.py  spec_test.py
apps/api/app/routers/: __init__.py
apps/api/app/routers/health/: __init__.py  health_router.py  health_router_test.py
apps/api/app/routers/recipes/: __init__.py  data_paths.py  deps.py  recipes_router.py  recipes_router_test.py  repository.py  repository_test.py  state.py
apps/api/recipes_api/: data_paths.py  main.py  main_test.py  models.py  openapi_codegen.py  openapi_paths.py  openapi_paths_test.py  openapi_spec.py  openapi_spec_test.py  repository.py  repository_test.py
apps/api/recipes_api/data/: recipes.json
apps/api/recipes_api/health/: __init__.py  health_routes_test.py
apps/api/recipes_api/recipes/: __init__.py  exceptions.py  recipes_routes.py  recipes_routes_test.py
apps/api/scripts/: generate_openapi_models.py  validate_openapi_generated.sh
apps/api/tests/: test_health.py
apps/web/: .env.example  COMPONENT_LIBRARY.md  README.md  biome.json  index.html  knip.json  openapi-ts.config.ts  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/scripts/: assert-no-function-declarations.mjs
apps/web/src/: App.css  App.test.tsx  App.tsx  index.css  index.tsx  vite-env.d.ts
apps/web/src/api/: client.ts  index.ts
apps/web/src/components/: RecipeCard.tsx  RecipeList.tsx
apps/web/src/components/layout/: PageBackLink.tsx  shell.tsx
apps/web/src/components/recipe-detail/: RecipeDetailBody.tsx  RecipeDetailHeader.tsx  RecipeDetailHero.tsx  RecipeDetailIngredients.tsx  (+2 more)
apps/web/src/layout/: AppShell.css  AppShell.tsx
apps/web/src/lib/: format-fetch-error.test.ts  format-fetch-error.ts  loadRecipeDetail.ts  loadRecipes.ts  utils.ts
apps/web/src/pages/: Home.test.tsx  Home.tsx  Page.css  RecipePage.missing-id.test.tsx  RecipePage.test.tsx  RecipePage.tsx
apps/web/src/test/: vitest-no-jest-dom.ts  vitest-setup.ts
(+11 files in other folders)
