[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "recipes-api"
version = "0.1.0"
description = "Bread Recipes REST API (FastAPI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "datamodel-code-generator==0.26.5",
  "fastapi==0.115.12",
  "pyyaml==6.0.2",
  "uvicorn[standard]==0.34.3",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.3.5",
  "pytest-cov==6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
exclude = ["**/app/**/*_test.py"]

[tool.pytest.ini_options]
testpaths = ["app"]
pythonpath = ["."]
python_files = ["*_test.py"]
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["app"]
omit = ["app/openapi/generated/*"]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "^ *\\.\\.\\.$",
]
